--- a/src/index.css
+++ b/src/index.css
@@ -16,7 +16,7 @@
 
 #root {
   max-width: 1280px;
-  margin: 0 auto;
+  margin: 0 auto 3.5em; /* to allow room for fixed nav footer-- see ./routes/nav.css */
   padding: 2rem;
   text-align: center;
 }
