make font scale with width

--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,8 @@
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
   font-weight: 400;
-
+  font-size: calc(16px + 1vw);
+  line-height: calc(1.1em + 0.5vw);
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
   background-color: #242424;
@@ -12,13 +12,12 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
+
+  margin: 0 auto 3.5em; /* to allow room for fixed nav footer-- see ./routes/nav.css */
 }
 
 #root {
-  max-width: 1280px;
-  margin: 0 auto 3.5em; /* to allow room for fixed nav footer-- see ./routes/nav.css */
   padding: 2rem;
-  text-align: center;
 }
 
 a {
@@ -33,7 +32,6 @@ a:hover {
 body {
   margin: 0;
   display: flex;
-  place-items: center;
   min-width: 320px;
   min-height: 100vh;
 }
