--- a/src/routes/nav/nav.css
+++ b/src/routes/nav/nav.css
@@ -13,6 +13,7 @@
     gap: 1em;
     list-style-type: none;
     justify-content: center;
+    padding-inline-start: unset;
 }
 
 #footer a.active {
