adjust styles to allow centered prompt

--- a/src/routes/questionnaire/prompt.css
+++ b/src/routes/questionnaire/prompt.css
@@ -1,5 +1,9 @@
 #prompt {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
   place-content: center;
+  width: 100%;
 }
 
 #prompt input[type="checkbox"] {
