--- a/src/index.css
+++ b/src/index.css
@@ -12,12 +12,12 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
-
-  margin: 0 auto 3.5em; /* to allow room for fixed nav footer-- see ./routes/nav.css */
 }
 
 #root {
   padding: 2rem;
+  width: 100%;
+  margin: 0 auto 3.5em; /* to allow room for fixed nav footer-- see ./routes/nav.css */
 }
 
 a {
