--- a/src/routes/questionnaire/questionnaire.css
+++ b/src/routes/questionnaire/questionnaire.css
@@ -16,3 +16,18 @@
   transform: scale(1 + 1vw);
   padding: 10px;
 }
+
+#prompt ul {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+}
+
+#prompt ul>li {
+  padding-bottom: 0.5rem;
+}
+
+#prompt ul>li>input {
+  font-size: inherit;
+  width: 80%;
+}
