Skill Status in Overview (#28)
* skill status and examples

* break the components into files

--- a/src/routes/overview/overview.css
+++ b/src/routes/overview/overview.css
@@ -10,6 +10,6 @@ details[open] > summary {
   text-decoration: underline;
 }
 
-details > *:not(summary) {
-  margin-left: 1em;
+details[id^="competency-"] > *:not(summary) {
+  margin-left: 0.5em;
 }
